--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <application
         android:name=".WisapeApplication"
         android:allowBackup="true"
@@ -14,6 +18,7 @@
 
         <activity
             android:name=".activity.LauncherActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,11 +41,13 @@
             android:screenOrientation="portrait" />
 
         <activity android:name=".activity.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             />
 
         <activity android:name=".activity.PhotoSelectorActivity"
+            android:label="@string/photo_bucket_all"
             android:screenOrientation="portrait"
             android:launchMode="singleTop" />
 
