--- a/mobihelp_sdk_android_v1_4/build.gradle
+++ b/mobihelp_sdk_android_v1_4/build.gradle
@@ -6,7 +6,7 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
-    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile "com.android.support:appcompat-v7:${ANDROID_SUPPORT_VERSION}"
 }
 
 android {
