--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,12 @@
             android:label="@string/user_profile_label"
             android:screenOrientation="portrait"
             android:launchMode="singleTop"/>
+        
+        <activity android:name=".activity.PasswordResetActivity"
+            android:label="@string/password_reset_label"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop"/>
+
 
         <activity android:name="com.soundcloud.android.crop.CropImageActivity"
             android:screenOrientation="portrait"
