--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,7 @@
             android:screenOrientation="portrait"
             android:launchMode="singleTop" />
 
-        <activity android:name=".activity.UserProfileActivity"
+        <activity android:name=".activity.TestActivity"
             android:label="@string/user_profile_label"
             android:screenOrientation="portrait"
             android:launchMode="singleTop"/>
