Add user profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,11 @@
             android:launchMode="singleTop"
             />
 
+        <activity android:name=".activity.UserProfileActivity"
+            android:label="@string/user_profile_label"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop"/>
+
         <activity android:name="com.soundcloud.android.crop.CropImageActivity"
             android:screenOrientation="portrait"
             android:launchMode="singleTop"/>
