--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,11 +55,6 @@
             android:screenOrientation="portrait"
             android:launchMode="singleTop" />
 
-        <activity android:name=".activity.TestActivity"
-            android:label="@string/user_profile_label"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop"/>
-        
         <activity android:name=".activity.PasswordResetActivity"
             android:label="@string/password_reset_label"
             android:screenOrientation="portrait"
@@ -76,6 +71,11 @@
             android:launchMode="singleTop"/>
 
         <activity android:name="com.soundcloud.android.crop.CropImageActivity"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop"/>
+
+        <activity android:name=".activity.TestActivity"
+            android:label="Test"
             android:screenOrientation="portrait"
             android:launchMode="singleTop"/>
 
