--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,6 +79,12 @@
             android:screenOrientation="portrait"
             android:launchMode="singleTop"/>
 
+        <activity android:name=".activity.ScaleCropImageActivity"
+            android:theme="@style/AppActionBar.Transparent"
+            android:label="@string/crop_activity_label"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop"/>
+
         <activity android:name=".activity.TestActivity"
             android:label="Test"
             android:screenOrientation="portrait"
