--- a/android-crop/build.gradle
+++ b/android-crop/build.gradle
@@ -21,6 +21,7 @@ android {
 dependencies {
     compile "com.android.support:support-annotations:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:support-v4:${ANDROID_SUPPORT_VERSION}"
+    compile "com.android.support:appcompat-v7:${ANDROID_SUPPORT_VERSION}"
     androidTestCompile 'com.squareup:fest-android:1.0.7'
     androidTestCompile "com.android.support:support-v4:${ANDROID_SUPPORT_VERSION}"
     androidTestCompile 'org.mockito:mockito-core:1.9.5'
