--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,7 +80,7 @@
             android:launchMode="singleTop"/>
 
         <activity android:name=".activity.ScaleCropImageActivity"
-            android:theme="@style/AppActionBar.Transparent"
+            android:theme="@style/AppTheme.Transparent"
             android:label="@string/crop_activity_label"
             android:screenOrientation="portrait"
             android:launchMode="singleTop"/>
