--- a/VolleyPlus/build.gradle
+++ b/VolleyPlus/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
+        classpath 'com.android.tools.build:gradle:1.2.3'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.5'
     }
 }
@@ -17,13 +17,13 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.jfrog.bintray'
 
 dependencies {
-    compile 'com.android.support:support-v4:+'
-    compile 'com.google.code.gson:gson:2.2.4'
+    compile "com.android.support:support-v4:${ANDROID_SUPPORT_VERSION}"
+    compile 'com.google.code.gson:gson:2.3.1'
 }
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion '21.1.2'
+    compileSdkVersion 22
+    buildToolsVersion "22.0.1"
 
     sourceSets {
         main {
