--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,10 @@ android {
         }
     }
 
-
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
 task nativeLibsToJar(type: Zip, description: 'create a jar archive of the native libs') {
