--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,35 +6,39 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
         android:name=".WisapeApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
         <activity
             android:name=".activity.LauncherActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
 
         <!-- Login Activity-->
         <activity
             android:name=".activity.LoginActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
 
-        <activity android:name=".activity.SignUpActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.SignUpActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
 
         <!-- Oauth Activity-->
         <activity
@@ -44,75 +48,94 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
 
-        <activity android:name=".activity.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"
+        <activity
+            android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            />
+            android:theme="@style/AppTheme.NoActionBar" />
 
-        <activity android:name=".activity.PhotoSelectorActivity"
+        <activity
+            android:name=".activity.PhotoSelectorActivity"
             android:label="@string/photo_bucket_all"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop" />
-
-        <activity android:name=".activity.PasswordResetActivity"
-            android:label="@string/password_reset_label"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop"/>
-
-        <activity android:name=".activity.PasswordResetSuccessActivity"
-            android:label="@string/password_reset_success_text_start"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop"/>
-
-        <activity android:name=".activity.StoryTemplateActivity"
-            android:screenOrientation="portrait"
             android:launchMode="singleTop"
-            />
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".activity.UserProfileActivity"
+        <activity
+            android:name=".activity.PasswordResetActivity"
+            android:label="@string/password_reset_label"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".activity.PasswordResetSuccessActivity"
+            android:label="@string/password_reset_success_text_start"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".activity.StoryTemplateActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".activity.UserProfileActivity"
             android:label="@string/user_profile_label"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop"/>
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
 
-        <activity android:name="com.soundcloud.android.crop.CropImageActivity"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop"/>
+        <activity
+            android:name="com.soundcloud.android.crop.CropImageActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".activity.AboutActivity"
+        <activity
+            android:name=".activity.AboutActivity"
             android:label="@string/about_label"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop"/>
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait">
 
-        <activity android:name=".activity.ScaleCropImageActivity"
-            android:theme="@style/AppTheme.Transparent"
+        </activity>
+
+        <activity
+            android:name=".activity.AboutWebViewActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".activity.ScaleCropImageActivity"
             android:label="@string/crop_activity_label"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:launchMode="singleTop"/>
+            android:theme="@style/AppTheme.Transparent" />
 
-        <activity android:name=".activity.StorySettingsActivity"
+        <activity
+            android:name=".activity.StorySettingsActivity"
             android:label="@string/story_settings_label"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop"/>
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".activity.StoryMusicActivity"
+        <activity
+            android:name=".activity.StoryMusicActivity"
             android:label="@string/story_music_label"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop" />
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".activity.StoryReleaseActivity"
+        <activity
+            android:name=".activity.StoryReleaseActivity"
             android:label="@string/story_release_label"
-            android:windowSoftInputMode="adjustPan|stateHidden"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:launchMode="singleTop"/>
+            android:windowSoftInputMode="adjustPan|stateHidden" />
 
-        <activity android:name=".activity.TestActivity"
+        <activity
+            android:name=".activity.TestActivity"
             android:label="Test"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop"/>
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
 
-        <service android:name=".service.NanoService"
-            android:exported="false"/>
+        <service
+            android:name=".service.NanoService"
+            android:exported="false" />
 
         <service android:name="org.cubieline.lplayer.app.LPlayerService">
             <meta-data
@@ -124,11 +147,11 @@
         </service>
 
         <provider
-            android:authorities="com.wisape.photo"
             android:name="com.wisape.android.content.PhotoProvider"
-            android:syncable="false"
+            android:authorities="com.wisape.photo"
+            android:enabled="true"
             android:exported="false"
-            android:enabled="true"/>
+            android:syncable="false" />
     </application>
 
 </manifest>
