--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     compile fileTree(dir: "$buildDir/native-libs", include: 'native-libs.jar')
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/libammsdk.jar')
+    compile files('libs/Parse-1.2.0.jar')
     compile project(':oauth')
     //compile project(':volley')
     compile project(':mobihelp_sdk_android_v1_4')
@@ -80,4 +81,5 @@ dependencies {
     compile 'com.google.zxing:core:3.2.0'
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
+
 }
