--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature android:name="android.hardware.camera" />
@@ -16,6 +16,22 @@
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+
+        <meta-data android:name="com.parse.push.notification_icon" android:resource="@mipmap/logo"/>
+
+        <service android:name="com.parse.PushService" />
+        <receiver android:name="com.parse.ParseBroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+            </intent-filter>
+        </receiver>
+
+        <receiver android:name=".content.MessageCenterReceiver" >
+            <intent-filter>
+                <action android:name="com.wisape.android.content.MessageCenterReceiver" />
+            </intent-filter>
+        </receiver>
 
         <activity
             android:name=".activity.LauncherActivity"
@@ -52,6 +68,7 @@
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
+            android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <activity
@@ -68,7 +85,7 @@
 
         <activity
             android:name=".activity.PasswordResetSuccessActivity"
-            android:label="@string/password_reset_success_text_start"
+            android:label="@string/password_reset_success_label"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
 
@@ -100,6 +117,16 @@
             android:name=".activity.AboutWebViewActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
+
+        <activity android:name=".activity.MessageCenterActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:label="@string/message_center_label"/>
+
+        <activity android:name=".activity.MessageCenterDetailActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:label="@string/message_center_label"/>
 
         <activity
             android:name=".activity.ScaleCropImageActivity"
