--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,7 @@ dependencies {
     compile "com.android.support:design:${ANDROID_SUPPORT_VERSION}"
     compile "com.squareup.okhttp:okhttp-urlconnection:${OKHTTP_VERSION}"
     compile 'com.jakewharton:butterknife:6.1.0'
-    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.alibaba:fastjson:1.2.6'
     compile 'com.getbase:floatingactionbutton:1.9.1'
     compile "com.facebook.fresco:fresco:${FRESCO_VERSION}"
     compile "com.facebook.fresco:imagepipeline-okhttp:${FRESCO_VERSION}"
