--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,5 +81,6 @@ dependencies {
     compile 'com.google.zxing:core:3.2.0'
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
+    compile 'de.greenrobot:eventbus:2.4.0'
 
 }
