修改首页实现逻辑 修改头像裁剪崩溃bug

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -74,18 +74,31 @@ tasks.withType(JavaCompile) {
 dependencies {
     compile fileTree(dir: "$buildDir/native-libs", include: 'native-libs.jar')
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile files('libs/libammsdk.jar')
+//    compile files('libs/libammsdk.jar')
     compile files('libs/Parse-1.2.0.jar')
     compile files('libs/bugtags-lib-1.0.4.jar')
-    compile project(':oauth')
+//    compile project(':oauth')
     compile project(':mobihelp_sdk_android_v1_4')
     compile project(':cordova')
     compile project(':nanohttpd')
     compile project(':VolleyPlus')
     compile project(':lplayer')
+    compile files('libs/MobTools.jar')
+    compile files('libs/ShareSDK-Email-2.6.3.jar')
+    compile files('libs/ShareSDK-FacebookMessenger-2.6.3.jar')
+    compile files('libs/ShareSDK-Linkedin-2.6.3.jar')
+    compile files('libs/ShareSDK-ShortMessage-2.6.3.jar')
+    compile files('libs/ShareSDK-Wechat-2.6.3.jar')
+    compile files('libs/ShareSDK-Wechat-Core-2.6.3.jar')
+    compile files('libs/ShareSDK-Wechat-Moments-2.6.3.jar')
+    compile files('libs/ShareSDK-Facebook-2.6.3.jar')
+    compile files('libs/ShareSDK-GooglePlus-2.6.3.jar')
+    compile files('libs/ShareSDK-Twitter-2.6.3.jar')
+    compile files('libs/ShareSDK-Core-2.6.3.jar')
+    compile files('libs/MobLogCollector.jar')
     compile "com.android.support:appcompat-v7:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:recyclerview-v7:${ANDROID_SUPPORT_VERSION}"
-    compile "com.android.support:support-v4:${ANDROID_SUPPORT_VERSION}"
+//    compile "com.android.support:support-v4:${ANDROID_SUPPORT_VERSION}"
     compile "com.squareup.okhttp:okhttp-urlconnection:${OKHTTP_VERSION}"
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.alibaba:fastjson:1.2.6'
@@ -95,5 +108,6 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-android:4.48'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.android.gms:play-services:7.5.0'
+
 
 }
