--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,12 +102,13 @@ dependencies {
     compile "com.squareup.okhttp:okhttp-urlconnection:${OKHTTP_VERSION}"
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.alibaba:fastjson:1.2.6'
-    compile 'com.getbase:floatingactionbutton:1.9.1'
+//    compile 'com.getbase:floatingactionbutton:1.9.1'
     compile 'com.google.zxing:core:3.2.0'
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.android.gms:play-services:7.5.0'
+
 
 
 }
