--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,18 +73,18 @@
             android:theme="@style/Theme.AppCompat.NoActionBar" />
 
         <!-- Oauth Activity-->
-        <activity
-            android:name="com.oauth.android.OAuthActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait" />
+        <!--<activity-->
+            <!--android:name="com.oauth.android.OAuthActivity"-->
+            <!--android:configChanges="keyboardHidden|orientation|screenSize"-->
+            <!--android:exported="true"-->
+            <!--android:label="@string/app_name"-->
+            <!--android:screenOrientation="portrait" />-->
 
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:launchMode="singleInstance"
+            android:launchMode="singleTask"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <activity
