--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -111,6 +111,7 @@
 
         <activity
             android:name=".activity.StoryTemplateActivity"
+            android:launchMode="singleTask"
             android:screenOrientation="portrait" />
 
         <activity
