--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,6 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-android:4.48'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.bugtags.library:bugtags-lib:1.0.5'
+    compile 'com.android.support:percent:22.2.0'
+
 }
