--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,7 @@
         <activity
             android:name=".activity.SignUpActivity"
             android:screenOrientation="portrait"
+            android:launchMode="singleInstance"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
 
         <!-- Oauth Activity-->
