修改不要的信息

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,61 +25,61 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/face_book_id"/>
+        <!--<meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/face_book_id"/>-->
         <meta-data android:name="com.parse.push.notification_icon" android:resource="@mipmap/logo"/>
 
         <meta-data
             android:name="com.google.android.gms.analytics.globalConfigResource"
             android:resource="@xml/global_tracker" />
 
-        <!--<service android:name="com.parse.PushService" />-->
-        <!--<receiver android:name="com.parse.ParseBroadcastReceiver">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.BOOT_COMPLETED" />-->
-                <!--<action android:name="android.intent.action.USER_PRESENT" />-->
-            <!--</intent-filter>-->
-        <!--</receiver>-->
+        <service android:name="com.parse.PushService" />
+        <receiver android:name="com.parse.ParseBroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+            </intent-filter>
+        </receiver>
 
         <!--parse需要-->
-        <service android:name="com.parse.PushService" />
-        <receiver android:name="com.parse.ParsePushBroadcastReceiver"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.parse.push.intent.RECEIVE" />
-                <action android:name="com.parse.push.intent.DELETE" />
-                <action android:name="com.parse.push.intent.OPEN" />
-            </intent-filter>
-        </receiver>
-        <receiver android:name="com.parse.GcmBroadcastReceiver"
-            android:permission="com.google.android.c2dm.permission.SEND">
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+        <!--<service android:name="com.parse.PushService" />-->
+        <!--<receiver android:name="com.parse.ParsePushBroadcastReceiver"-->
+            <!--android:exported="false">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="com.parse.push.intent.RECEIVE" />-->
+                <!--<action android:name="com.parse.push.intent.DELETE" />-->
+                <!--<action android:name="com.parse.push.intent.OPEN" />-->
+            <!--</intent-filter>-->
+        <!--</receiver>-->
+        <!--<receiver android:name="com.parse.GcmBroadcastReceiver"-->
+            <!--android:permission="com.google.android.c2dm.permission.SEND">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="com.google.android.c2dm.intent.RECEIVE" />-->
+                <!--<action android:name="com.google.android.c2dm.intent.REGISTRATION" />-->
 
-                <!--
-                  IMPORTANT: Change "com.parse.starter" to match your app's package name.
-                -->
-                <category android:name="com.wisape.android" />
-            </intent-filter>
-        </receiver>
+                <!--&lt;!&ndash;-->
+                  <!--IMPORTANT: Change "com.parse.starter" to match your app's package name.-->
+                <!--&ndash;&gt;-->
+                <!--<category android:name="com.wisape.android" />-->
+            <!--</intent-filter>-->
+        <!--</receiver>-->
         <!--
           IMPORTANT: Change "com.parse.starter.permission.C2D_MESSAGE" in the lines below
           to match your app's package name + ".permission.C2D_MESSAGE".
         -->
-        <permission android:protectionLevel="signature"
-            android:name="com.wisape.android.permission.C2D_MESSAGE" />
-        <uses-permission android:name="com.wisape.android.permission.C2D_MESSAGE" />
+        <!--<permission android:protectionLevel="signature"-->
+            <!--android:name="com.wisape.android.permission.C2D_MESSAGE" />-->
+        <!--<uses-permission android:name="com.wisape.android.permission.C2D_MESSAGE" />-->
         
         <!--facebook需要的activity-->
-        <activity android:name="com.facebook.FacebookActivity"
-            android:configChanges=
-                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:label="@string/app_name" />
+        <!--<activity android:name="com.facebook.FacebookActivity"-->
+            <!--android:configChanges=-->
+                <!--"keyboard|keyboardHidden|screenLayout|screenSize|orientation"-->
+            <!--android:theme="@android:style/Theme.Translucent.NoTitleBar"-->
+            <!--android:label="@string/app_name" />-->
 
-        <provider android:authorities="com.facebook.app.FacebookContentProvider305010149669435"
-            android:name="com.facebook.FacebookContentProvider"
-            android:exported="true"/>
+        <!--<provider android:authorities="com.facebook.app.FacebookContentProvider305010149669435"-->
+            <!--android:name="com.facebook.FacebookContentProvider"-->
+            <!--android:exported="true"/>-->
 
         <activity
             android:name="com.mob.tools.MobUIShell"
