--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,7 +88,7 @@ dependencies {
     compile files('libs/ShareSDK-Wechat-2.6.2.jar')
     compile files('libs/ShareSDK-Wechat-Core-2.6.2.jar')
     compile files('libs/ShareSDK-Wechat-Moments-2.6.2.jar')
-//    compile files('libs/ShareSDK-Facebook-2.6.2.jar')
+    compile files('libs/ShareSDK-Facebook-2.6.2.jar')
     compile files('libs/ShareSDK-GooglePlus-2.6.2.jar')
     compile files('libs/ShareSDK-Twitter-2.6.2.jar')
     compile files('libs/ShareSDK-Core-2.6.2.jar')
