--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,5 +104,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.bugtags.library:bugtags-lib:1.0.6'
     compile 'com.android.support:percent:22.2.0'
-//    compile 'com.facebook.android:facebook-android-sdk:4.7.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.7.0'
 }
