--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
-        versionName "0.11"
+        versionName "0.12"
         multiDexEnabled true
     }
     dexOptions {
@@ -80,19 +80,7 @@ dependencies {
     compile project(':cordova')
     compile project(':VolleyPlus')
     compile project(':lplayer')
-    compile files('libs/MobTools.jar')
-    compile files('libs/ShareSDK-Email-2.6.2.jar')
-    compile files('libs/ShareSDK-FacebookMessenger-2.6.2.jar')
-    compile files('libs/ShareSDK-Linkedin-2.6.2.jar')
-    compile files('libs/ShareSDK-ShortMessage-2.6.2.jar')
-    compile files('libs/ShareSDK-Wechat-2.6.2.jar')
-    compile files('libs/ShareSDK-Wechat-Core-2.6.2.jar')
-    compile files('libs/ShareSDK-Wechat-Moments-2.6.2.jar')
-    compile files('libs/ShareSDK-Facebook-2.6.2.jar')
-    compile files('libs/ShareSDK-GooglePlus-2.6.2.jar')
-    compile files('libs/ShareSDK-Twitter-2.6.2.jar')
-    compile files('libs/ShareSDK-Core-2.6.2.jar')
-    compile files('libs/MobLogCollector.jar')
+//
     compile files('libs/microlog4android-1.1.jar')
     compile "com.android.support:recyclerview-v7:${ANDROID_SUPPORT_VERSION}"
     compile "com.squareup.okhttp:okhttp-urlconnection:${OKHTTP_VERSION}"
@@ -105,5 +93,19 @@ dependencies {
     compile 'com.android.support:percent:22.2.0'
     compile 'com.facebook.android:facebook-android-sdk:4.7.0'
     compile 'com.github.bumptech.glide:glide:3.6.1'
+
+    compile files('libs/MobTools.jar')
+    compile files('libs/ShareSDK-Email-2.6.5.jar')
+    compile files('libs/ShareSDK-FacebookMessenger-2.6.5.jar')
+    compile files('libs/ShareSDK-Linkedin-2.6.5.jar')
+    compile files('libs/ShareSDK-ShortMessage-2.6.5.jar')
+    compile files('libs/ShareSDK-Wechat-2.6.2.jar')
+    compile files('libs/ShareSDK-Wechat-Core-2.6.5.jar')
+    compile files('libs/ShareSDK-Wechat-Moments-2.6.5.jar')
+    compile files('libs/ShareSDK-Twitter-2.6.5.jar')
+    compile files('libs/ShareSDK-Core-2.6.5.jar')
+    compile files('libs/MobLogCollector.jar')
+    compile 'com.google.android.gms:play-services-plus:8.3.0'
+
 
 }
