--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,20 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/face_book_id"/>
+
+
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:label="@string/app_name" />
+
+        <provider android:authorities="com.facebook.app.FacebookContentProvider900883746624807"
+            android:name="com.facebook.FacebookContentProvider"
+            android:exported="true"/>
+
         <activity
             android:name="com.mob.tools.MobUIShell"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
@@ -49,6 +63,10 @@
             </intent-filter>
 
         </activity>
+
+        <activity android:name=".activity.RegisterActivity"
+            android:label="@string/user_register"
+            android:screenOrientation="portrait"/>
 
         <!-- 微信分享回调 -->
         <activity
